--- a/README.Rmd
+++ b/README.Rmd
@@ -152,7 +152,7 @@ The `planning()` function calculates the required sample size for a statistical 
 
 ### Select transactions with the `selection()` function:
 
-The `selection()` function takes a data frame and performs sampling according to one of three algorithms: random sampling, cell sampling, or fixed interval sampling in combination with either record sampling or monetary unit sampling. The function returns an object of class `jfaSelection` which can be used with associated `print()` and a `plot()` methods. The input for the `sampleSize` argument can be an object of class `jfaPlanning` as returned by the `planning()` function.
+The `selection()` function takes a data frame and performs statistical sampling according to one of three algorithms: random sampling, cell sampling, or fixed interval sampling in combination with either record sampling or monetary unit sampling. The function returns an object of class `jfaSelection` which can be used with associated `print()` and a `plot()` methods. The input for the `sampleSize` argument can be an object of class `jfaPlanning` as returned by the `planning()` function.
 
 *Full function with default arguments:*
 
@@ -206,7 +206,7 @@ The `report()` function takes an object of class `jfaEvaluation` as returned by 
 
 *Full function with default arguments:*
 
-`report(object = NULL, file = NULL, format = 'html_document')`
+`report(object, file = 'report.html', format = 'html_document')`
 
 For an example report, see the following [link](https://github.com/koenderks/jfa/raw/master/man/figures/readme/report/report.pdf).
 
