--- a/README.Rmd
+++ b/README.Rmd
@@ -103,11 +103,11 @@ Below you can find a enumeration and explanation of the functions in `jfa`, sort
 
 * [`auditPrior()`](#create-a-prior-distribution-with-the-auditprior-function)
 * [`planning()`](#plan-a-sample-with-the-planning-function)
-* [`selection()`](#select-transactions-with-the-selection-function)
+* [`selection()`](#select-items-with-the-selection-function)
 * [`evaluation()`](#evaluate-a-sample-with-the-evaluation-function)
 * [`report()`](#generate-a-report-with-the-report-function)
 
-### Create a prior distribution with the `auditPrior()` function:
+### Create a prior distribution with the `auditPrior()` function
 
 The `auditPrior()` function creates a prior distribution according to one of several methods, including a translation of the assessments of the inherent risk and control risk from the audit risk model. The function returns an object of class `jfaPrior` which can be used with associated `print()` and `plot()` methods. `jfaPrior` objects can also be used as input for the `prior` argument in other functions.
 
@@ -134,7 +134,7 @@ The `auditPrior()` function creates a prior distribution according to one of sev
 | `sample` | Derks et al. (2020) | Earlier sample | `sampleN` and `sampleK` |
 | `factor` | Derks et al. (2020) | Weighted earlier sample | `factor`, `sampleN` and `sampleK` |
 
-### Plan a sample with the `planning()` function:
+### Plan a sample with the `planning()` function
 
 The `planning()` function calculates the required sample size for a statistical audit sample based on the Poisson, binomial, or hypergeometric likelihood. The function returns an object of class `jfaPlanning` which can be used with associated `print()` and a `plot()` methods. The input for the `prior` argument can be an object of class `jfaPrior` as returned by the `auditPrior()` function to perform Bayesian planning.
 
@@ -150,7 +150,7 @@ The `planning()` function calculates the required sample size for a statistical 
 | `poisson` | Stewart (2012) | Poisson likelihood |
 | `hypergeometric` | Stewart (2012) | Hypergeometric likelihood |
 
-### Select transactions with the `selection()` function:
+### Select items with the `selection()` function
 
 The `selection()` function takes a data frame and performs statistical sampling according to one of three algorithms: random sampling, cell sampling, or fixed interval sampling in combination with either record sampling or monetary unit sampling. The function returns an object of class `jfaSelection` which can be used with associated `print()` and a `plot()` methods. The input for the `sampleSize` argument can be an object of class `jfaPlanning` as returned by the `planning()` function.
 
@@ -162,7 +162,7 @@ The `selection()` function takes a data frame and performs statistical sampling 
 
 | `units` | Reference | Description | Additional arguments |
 |---------|-------|-----|----|
-| `records` | Leslie, Teitlebaum, and Anderson (1979) | Sampling units are transactions | |
+| `records` | Leslie, Teitlebaum, and Anderson (1979) | Sampling units are items | |
 | `mus` | Leslie, Teitlebaum, and Anderson (1979) | Sampling units are monetary units | `bookValues` |
 
 *Supported options for the `algorithm` argument:*
@@ -173,7 +173,7 @@ The `selection()` function takes a data frame and performs statistical sampling 
 | `cell` | | Cell sampling | |
 | `interval` | | Systematic sampling / Fixed interval sampling | `intervalStartingPoint` |
 
-### Evaluate a sample with the `evaluation()` function:
+### Evaluate a sample with the `evaluation()` function
 
 The `evaluation()` function takes a sample or summary statistics of the sample and performs evaluation according to the specified method and sampling objectives. The function returns an object of class `jfaEvalution` which can be used with associated `print()` and `plot()` methods. The input for the `prior` argument can be an object of class `jfaPrior` to perform Bayesian evaluation.
 
@@ -200,7 +200,7 @@ The `evaluation()` function takes a sample or summary statistics of the sample a
 | `quotient` | Touw and Hoogduin (2011) | Quotient estimator | `populationBookValue` |
 | `regression` | Touw and Hoogduin (2011) | Regression estimator | `populationBookValue` |
 
-### Generate a report with the `report()` function:
+### Create a report with the `report()` function
 
 The `report()` function takes an object of class `jfaEvaluation` as returned by the `evaluation()` function and automatically generates a `html` or `pdf` report containing the analysis results and their interpretation.
 
