--- a/README.Rmd
+++ b/README.Rmd
@@ -29,16 +29,16 @@ knitr::opts_chunk$set(
 
 For complete documentation of `jfa`, visit the [package website](https://koenderks.github.io/jfa/) or download the [package manual](https://cran.r-project.org/package=jfa/jfa.pdf).
 
-* [Installation](#installation)
-* [Cheat sheet](#cheat-sheet)
-* [Benchmarks](#benchmarks)
-* [Statistical tables](#statistical-tables)
-* [Available functions](#available-functions)
-* [References](#references)
-* [Package statistics](#package-statistics) 
-* [Contributing](#contributing) 
+1. [Installation](#1-installation)
+2. [Cheat sheet](#2-cheat-sheet)
+3. [Benchmarks](#3-benchmarks)
+4. [Statistical tables](#4-statistical-tables)
+5. [Available functions](#5-available-functions)
+6. [References](#6-references)
+7. [Package statistics](#7-package-statistics) 
+8. [Contributing](#8-contributing) 
 
-## Installation
+## 1 Installation
 
 The most recent version of `jfa` can be downloaded from [CRAN](https://cran.r-project.org/package=jfa) by running the following command in R or RStudio:
 
@@ -58,15 +58,13 @@ After installation the `jfa` package can be loaded in R or RStudio by typing:
 library(jfa)
 ```
 
-## Cheat sheet
+## 2 Cheat sheet
 
 The cheat sheet below can help you get started with the `jfa` package and its workflow. You can download a `pdf` version of the cheat sheet [here](https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.pdf).
 
-<p align='center'>
-  <img src='https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.png' alt='cheatsheet' width='1000'>
-</p>
+<p align='center'><img src='https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.png' alt='cheatsheet' width='1000'></p>
 
-## Benchmarks
+## 3 Benchmarks
 
 To validate the statistical results, `jfa`'s main output is currently being verified against the following benchmarks:
 
@@ -74,7 +72,7 @@ To validate the statistical results, `jfa`'s main output is currently being veri
 - [Audit Sampling: Audit Guide](https://future.aicpa.org/cpe-learning/publication/audit-sampling-audit-guide-OPL) (Appendix A and Appendix C)
 - Touw, P., and Hoogduin, L. (2011). *Statistiek voor audit en controlling*. Boom uitgevers, Amsterdam.
 
-## Statistical tables
+## 4 Statistical tables
 
 Below you can find several informative tables that contain statistical sample sizes, upper limits, and Bayes factors. These tables are generated using the `planning()` and `evaluation()` functions provided by the package.
 
@@ -93,11 +91,9 @@ Below you can find several informative tables that contain statistical sample si
 - [Bayes factors based on the beta distribution](https://github.com/koenderks/jfa/raw/master/man/figures/tables/jfaBinomialBayesFactors.pdf)
 - [Bayes factors based on the gamma distribution](https://github.com/koenderks/jfa/raw/master/man/figures/tables/jfaPoissonBayesFactors.pdf)
 
-## Available functions
+## 5 Available functions
 
-<p align='center'>
-  <img src='https://github.com/koenderks/jfa/raw/master/man/figures/readme/banner/jfaBanner.png' alt='banner'/>
-</p>
+<p align='center'><img src='https://github.com/koenderks/jfa/raw/master/man/figures/readme/banner/jfaBanner.png' alt='banner'/></p>
 
 Below you can find a enumeration and explanation of the functions in `jfa`, sorted by their occurrence in the standard audit sampling workflow.
 
@@ -210,7 +206,7 @@ The `report()` function takes an object of class `jfaEvaluation` as returned by 
 
 For an example report, see the following [link](https://github.com/koenderks/jfa/raw/master/man/figures/readme/report/report.pdf).
 
-## References
+## 6 References
 
 - Bickel, P. J. (1992). Inference and auditing: The Stringer bound. *International Statistical Review*, 60(2), 197–209. - [View online](https://www.jstor.org/stable/1403650)
 - Cox, D. R., & Snell, E. J. (1979). On sampling and the estimation of rare errors. *Biometrika*, 66(1), 125-132. - [View online](https://doi.org/10.1093/biomet/66.1.125)
@@ -227,7 +223,7 @@ For an example report, see the following [link](https://github.com/koenderks/jfa
 - Stewart, T. R. (2013). *A Bayesian Audit Assurance Model with Application to the Component Materiality problem in Group Audits.* VU University, Amsterdam. - [View online](https://research.vu.nl/en/publications/a-bayesian-audit-assurance-model-with-application-to-the-componen)
 - Touw, P., and Hoogduin, L. (2011). *Statistiek voor Audit en Controlling*. Boom uitgevers, Amsterdam.
 
-## Package statistics
+## 7 Package statistics
 
 ```{r downloads, echo = FALSE, message = FALSE, warning=FALSE, include = FALSE}
 
@@ -345,7 +341,7 @@ ggplot2::ggsave(plot = world.map, filename = 'man/figures/readme/worldmap/worldm
 
 <img src='https://github.com/koenderks/jfa/raw/master/man/figures/readme/downloads/downloads.svg' width='50%' /><img src='https://github.com/koenderks/jfa/raw/master/man/figures/readme/worldmap/worldmap.svg' width='50%' />
 
-## Contributing
+## 8 Contributing
 
 `jfa` is an open-source project that aims to be useful for the audit community. Your help in benchmarking and extending `jfa` is therefore greatly appreciated. Contributing to `jfa` does not have to take much time or knowledge, and there is extensive information available about it on the [Wiki](https://github.com/koenderks/jfa/wiki) of this repository. 
 
